# dbt-snowflake-iceberg-table

./: .gitignore  .user.yml  README.md  profiles.yml  pyproject.toml
snowflake_iceberg/: catalogs.yml  dbt_project.yml
snowflake_iceberg/models/: sales_summary_iceberg.sql  sources.yml
