[project]
name = "dbt-snowflake-iceberg-table"
version = "0.1.0"
description = "dbt project for Snowflake with Iceberg table support"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dbt-core>=1.8.0",
    "dbt-snowflake>=1.8.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "sqlfluff>=3.0.0",
]